[gd_scene load_steps=2 format=3 uid="uid://c6qlso1fhp0kp"]

[ext_resource type="Script" path="res://start.gd" id="1_1ny8t"]

[node name="Start" type="Node2D"]
script = ExtResource("1_1ny8t")

[node name="startButton" type="Button" parent="."]
anchors_preset = -1
offset_left = 500.0
offset_top = 190.0
offset_right = 650.0
offset_bottom = 265.0
grow_horizontal = 2
grow_vertical = 2
text = "START"

[node name="tutorialButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 500.0
offset_top = 280.0
offset_right = 650.0
offset_bottom = 355.0
grow_horizontal = 2
grow_vertical = 2
text = "TUTORIAL"

[node name="creditsButton" type="Button" parent="."]
offset_left = 500.0
offset_top = 370.0
offset_right = 650.0
offset_bottom = 445.0
text = "CREDITS"

[node name="settingsButton" type="Button" parent="."]
offset_left = 30.0
offset_top = 30.0
offset_right = 80.0
offset_bottom = 80.0
